adding notebook for spectogram parameter testing

--- a/Crop_wav.ipynb
+++ b/Crop_wav.ipynb
@@ -43,7 +43,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b0fd5003f54e44c0bb879fc920050b40",
+       "model_id": "b8ab803a758e407389138a8a02e10d3d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -176,12 +176,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Read in wav"
+    "### Read in wav - if multichannel select first channel"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -210,7 +210,7 @@
        "       -0.04496078,  0.        ], dtype=float32)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -223,7 +223,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Start time in seconds since epoch"
+    "### Recording start time in UTC "
    ]
   },
   {
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -389,300 +389,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "researcher='SG'\n",
     "meta_df=prep_metadata(time_stamps, sample_rate, ref_value, cal_value, researcher, raw_signal_unit, recording_name)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>segment_file</th>\n",
-       "      <th>wav_origin</th>\n",
-       "      <th>sample_rate</th>\n",
-       "      <th>raw_signal_unit</th>\n",
-       "      <th>reference_value</th>\n",
-       "      <th>calibration_value</th>\n",
-       "      <th>researcher</th>\n",
-       "      <th>start_samples</th>\n",
-       "      <th>end_samples</th>\n",
-       "      <th>number_of_samples</th>\n",
-       "      <th>start_seconds</th>\n",
-       "      <th>end_seconds</th>\n",
-       "      <th>duration_seconds</th>\n",
-       "      <th>start_utc</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2017-02-04--10-28-03--00-00-01--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>16800000</td>\n",
-       "      <td>16900000</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>168</td>\n",
-       "      <td>169</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2017-02-04--10-28-03</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2017-02-04--10-28-08--00-00-04--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>17300000</td>\n",
-       "      <td>17700000</td>\n",
-       "      <td>400000</td>\n",
-       "      <td>173</td>\n",
-       "      <td>177</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2017-02-04--10-28-08</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017-02-04--10-28-15--00-00-03--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>18000000</td>\n",
-       "      <td>18300000</td>\n",
-       "      <td>300000</td>\n",
-       "      <td>180</td>\n",
-       "      <td>183</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2017-02-04--10-28-15</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017-02-04--10-28-22--00-00-04--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>18700000</td>\n",
-       "      <td>19100000</td>\n",
-       "      <td>400000</td>\n",
-       "      <td>187</td>\n",
-       "      <td>191</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2017-02-04--10-28-22</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017-02-04--10-28-36--00-00-03--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>20100000</td>\n",
-       "      <td>20400000</td>\n",
-       "      <td>300000</td>\n",
-       "      <td>201</td>\n",
-       "      <td>204</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2017-02-04--10-28-36</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2017-02-04--10-28-45--00-00-03--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>21000000</td>\n",
-       "      <td>21300000</td>\n",
-       "      <td>300000</td>\n",
-       "      <td>210</td>\n",
-       "      <td>213</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2017-02-04--10-28-45</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>2017-02-04--10-29-32--00-00-04--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>25700000</td>\n",
-       "      <td>26100000</td>\n",
-       "      <td>400000</td>\n",
-       "      <td>257</td>\n",
-       "      <td>261</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2017-02-04--10-29-32</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>2017-02-04--10-29-52--00-00-03--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>27700000</td>\n",
-       "      <td>28000000</td>\n",
-       "      <td>300000</td>\n",
-       "      <td>277</td>\n",
-       "      <td>280</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2017-02-04--10-29-52</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>2017-02-04--10-29-58--00-00-03--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>28300000</td>\n",
-       "      <td>28600000</td>\n",
-       "      <td>300000</td>\n",
-       "      <td>283</td>\n",
-       "      <td>286</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>2017-02-04--10-29-58</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>2017-02-04--10-30-18--00-00-04--C.wav</td>\n",
-       "      <td>2017-02-04--10-25-15--00-05-25--C.wav</td>\n",
-       "      <td>100000</td>\n",
-       "      <td>V</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>SG</td>\n",
-       "      <td>30300000</td>\n",
-       "      <td>30700000</td>\n",
-       "      <td>400000</td>\n",
-       "      <td>303</td>\n",
-       "      <td>307</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>2017-02-04--10-30-18</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                            segment_file  \\\n",
-       "0  2017-02-04--10-28-03--00-00-01--C.wav   \n",
-       "1  2017-02-04--10-28-08--00-00-04--C.wav   \n",
-       "2  2017-02-04--10-28-15--00-00-03--C.wav   \n",
-       "3  2017-02-04--10-28-22--00-00-04--C.wav   \n",
-       "4  2017-02-04--10-28-36--00-00-03--C.wav   \n",
-       "5  2017-02-04--10-28-45--00-00-03--C.wav   \n",
-       "6  2017-02-04--10-29-32--00-00-04--C.wav   \n",
-       "7  2017-02-04--10-29-52--00-00-03--C.wav   \n",
-       "8  2017-02-04--10-29-58--00-00-03--C.wav   \n",
-       "9  2017-02-04--10-30-18--00-00-04--C.wav   \n",
-       "\n",
-       "                              wav_origin  sample_rate raw_signal_unit  \\\n",
-       "0  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "1  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "2  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "3  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "4  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "5  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "6  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "7  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "8  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "9  2017-02-04--10-25-15--00-05-25--C.wav       100000               V   \n",
-       "\n",
-       "   reference_value  calibration_value researcher  start_samples  end_samples  \\\n",
-       "0                1                  1         SG       16800000     16900000   \n",
-       "1                1                  1         SG       17300000     17700000   \n",
-       "2                1                  1         SG       18000000     18300000   \n",
-       "3                1                  1         SG       18700000     19100000   \n",
-       "4                1                  1         SG       20100000     20400000   \n",
-       "5                1                  1         SG       21000000     21300000   \n",
-       "6                1                  1         SG       25700000     26100000   \n",
-       "7                1                  1         SG       27700000     28000000   \n",
-       "8                1                  1         SG       28300000     28600000   \n",
-       "9                1                  1         SG       30300000     30700000   \n",
-       "\n",
-       "   number_of_samples  start_seconds  end_seconds  duration_seconds  \\\n",
-       "0             100000            168          169               1.0   \n",
-       "1             400000            173          177               4.0   \n",
-       "2             300000            180          183               3.0   \n",
-       "3             400000            187          191               4.0   \n",
-       "4             300000            201          204               3.0   \n",
-       "5             300000            210          213               3.0   \n",
-       "6             400000            257          261               4.0   \n",
-       "7             300000            277          280               3.0   \n",
-       "8             300000            283          286               3.0   \n",
-       "9             400000            303          307               4.0   \n",
-       "\n",
-       "              start_utc  \n",
-       "0  2017-02-04--10-28-03  \n",
-       "1  2017-02-04--10-28-08  \n",
-       "2  2017-02-04--10-28-15  \n",
-       "3  2017-02-04--10-28-22  \n",
-       "4  2017-02-04--10-28-36  \n",
-       "5  2017-02-04--10-28-45  \n",
-       "6  2017-02-04--10-29-32  \n",
-       "7  2017-02-04--10-29-52  \n",
-       "8  2017-02-04--10-29-58  \n",
-       "9  2017-02-04--10-30-18  "
-      ]
-     },
-     "execution_count": 90,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "meta_df"
    ]
   },
   {
@@ -694,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -713,26 +425,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    None\n",
-       "1    None\n",
-       "2    None\n",
-       "3    None\n",
-       "4    None\n",
-       "5    None\n",
-       "6    None\n",
-       "7    None\n",
-       "8    None\n",
-       "9    None\n",
-       "dtype: object"
+       "0      None\n",
+       "1      None\n",
+       "2      None\n",
+       "3      None\n",
+       "4      None\n",
+       "       ... \n",
+       "119    None\n",
+       "120    None\n",
+       "121    None\n",
+       "122    None\n",
+       "123    None\n",
+       "Length: 124, dtype: object"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -751,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
