--- a/Interactive_plot.ipynb
+++ b/Interactive_plot.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "223bf410be0c40d3b0a773de2d978da3",
+       "model_id": "24007b47b218428fb3e80c1f682cc073",
        "version_major": 2,
        "version_minor": 0
       },
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -104,10 +104,10 @@
      "text": [
       "Please check sampling rate manually in the metadata file and set below in Hz! \n",
       "100000\n",
-      "Please check reference value in the files README and set below in uPa! \n",
+      "Please check reference value in the files README and set below! \n",
       "1\n",
-      "Please check calibration value in the files README and set below! \n",
-      " what does the fullscale voltage correspond to in Pa? \n",
+      "Please check calibration value in the files README and set below!\n",
+      " what does the fullscale voltage correspond to? \n",
       " 1\n",
       "Please indicate the researcher who performs the crop by initials [SG, JR] \n",
       " SG\n"
@@ -123,11 +123,11 @@
     "    sample_rate=int(input('Please check sampling rate manually in the metadata file and set below in Hz! \\n'))\n",
     "    \n",
     "# Set reference value\n",
-    "ref_value=int(input('Please check reference value in the files README and set below in uPa! \\n'))\n",
+    "ref_value=int(input('Please check reference value in the files README and set below! \\n'))\n",
     "\n",
     "# Calibration value\n",
-    "cal_value=int(input('Please check calibration value in the files README and set below! \\n what does the fullscale voltage correspond to in Pa? \\n '))\n",
-    "\n",
+    "cal_value=int(input('Please check calibration value in the files README and set below!'  +\n",
+    "                    '\\n what does the fullscale voltage correspond to? \\n '))\n",
     "\n",
     "# Set researcher\n",
     "researcher= input('Please indicate the researcher who performs the crop by initials [SG, JR] \\n ')"
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -162,27 +162,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([ 0.02192914,  0.00633857, -0.01353262, ..., -0.04321598,\n",
-       "       -0.04496078,  0.        ], dtype=float32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "y"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -191,13 +170,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c923842f68a64825a38e90a59e46b77a",
+       "model_id": "feee730ea2c34d9786770baf9eb1f0d1",
        "version_major": 2,
        "version_minor": 0
       },
@@ -233,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -255,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -297,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -350,24 +329,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[array([ 0.02192914,  0.00633857, -0.01353262, ..., -0.04321598,\n",
-       "        -0.04496078,  0.        ], dtype=float32)]"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "y_list"
+    "### Plotting and connecting eventhandler to plot"
    ]
   },
   {
@@ -378,7 +343,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5db19fd9bfb448d6bd69e6c27c9651e2",
+       "model_id": "fdba972b912947138584c53f5c9cc424",
        "version_major": 2,
        "version_minor": 0
       },
@@ -535,148 +500,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plotting and connecting eventhandler to plot"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c4f28c588e904386a840a25c03c353c0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.colorbar.Colorbar at 0x12c06d370>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Plot spectrogram\n",
-    "plt.figure(figsize=(200, 5))\n",
-    "# tell mpl_connect we want to pass a 'button_press_event' into onclick when the event is detected\n",
-    "plt.gcf().canvas.mpl_connect('key_press_event', onclick)\n",
-    "librosa.display.specshow(Ydb, cmap='seismic', sr=sr, x_axis='time', y_axis='hz')\n",
-    "plt.xticks(np.arange(0, len(Ydb)+1, 10))\n",
-    "plt.colorbar()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "### Make sure to save time_stamps as csv by clicking s on graph!"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import datetime\n",
-    "import time\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "ts = time.time()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'18816 days, 19:34:16.807788'"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "str(datetime.timedelta(seconds=ts))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2021, 7, 8, 21, 37, 44, 367900)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datetime.datetime.today() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "datetime.datetime(2021, 7, 8, 21, 37, 44)"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "datetime.datetime.strptime('2021-07-08--21-37-44', '%Y-%m-%d--%H-%M-%S')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
