--- a/Spectograms.ipynb
+++ b/Spectograms.ipynb
@@ -38,7 +38,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1de8e4cfefe0488792d1de6235a5dc2d",
+       "model_id": "f53116e53e384ee8838ad317ed95f64a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,12 +150,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "def open_wav(file, sample_rate):\n",
-    "    y, sr = librosa.load(file, sr=sample_rate)\n",
+    "    y_all, sr = librosa.load(file, sr=sample_rate)\n",
+    "    y=y_all[0]\n",
     "    return y, sr\n",
     "\n",
     "def wav_to_spect(y, sr, file): #, call_wav\n",
@@ -214,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +237,6 @@
    ],
    "source": [
     "for w in list(range(len(wavs))): \n",
-    "    print(w)\n",
     "    wav=wavs[w]\n",
     "    y, sr =open_wav(wav, sample_rate)\n",
     "    nfft, hop_length, win_length= wav_to_spect(y, sample_rate, wav)"
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,20 +265,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('spect_meta.yml', 'w') as outfile:\n",
     "    yaml.dump(spect_meta, outfile)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
