--- a/Spectogram_parameter_optimization.ipynb
+++ b/Spectogram_parameter_optimization.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,8 @@
     "import matplotlib.pyplot as plt\n",
     "import ipywidgets as widgets\n",
     "import wave\n",
-    "import yaml"
+    "import yaml\n",
+    "import math"
    ]
   },
   {
@@ -49,7 +50,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5697837e88a44d069aa93fbe79a6e166",
+       "model_id": "2f25957b896d4509b4787f8a86f9219d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -105,9 +106,11 @@
      "text": [
       "Please check sampling rate manually in the metadata file and set below in Hz! \n",
       "100000\n",
-      "Please check reference value in the files README and set below in uPa! \n",
+      "Please check the raw unit of the signal and enter below \n",
+      " V\n",
+      "Please check reference value in the metadata files and set below!  \n",
       "1\n",
-      "Please check calibration value in the files README and set below! \n",
+      "If available, please check calibration value of hydrophons in the metadata files and set below! \n",
       " what does the fullscale voltage correspond to in Pa? \n",
       " 1\n",
       "Please indicate the researcher who performs the crop by initials [SG, JR] \n",
@@ -123,12 +126,14 @@
     "except:\n",
     "    sample_rate=int(input('Please check sampling rate manually in the metadata file and set below in Hz! \\n'))\n",
     "    \n",
+    "# Set raw unit of signal\n",
+    "raw_unit=input('Please check the raw unit of the signal and enter below \\n ')\n",
+    "    \n",
     "# Set reference value\n",
-    "ref_value=int(input('Please check reference value in the files README and set below in uPa! \\n'))\n",
+    "ref_value=int(input('Please check reference value in the metadata files and set below!  \\n'))\n",
     "\n",
     "# Calibration value\n",
-    "cal_value=int(input('Please check calibration value in the files README and set below! \\n what does the fullscale voltage correspond to in Pa? \\n '))\n",
-    "\n",
+    "cal_value=int(input('If available, please check calibration value of hydrophons in the metadata files and set below! \\n what does the fullscale voltage correspond to in Pa? \\n '))\n",
     "\n",
     "# Set researcher\n",
     "researcher= input('Please indicate the researcher who performs the crop by initials [SG, JR] \\n ')"
@@ -184,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +198,7 @@
        "'2017-02-04--10-29-52--00-00-03--C.wav'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -213,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +226,7 @@
     "    y, sr = librosa.load(file, sr=sample_rate, mono=False)\n",
     "    return y, sr\n",
     "\n",
-    "def wav_to_spect_params(y, sr, file, nfft, hop_length, win_length): #, call_wav\n",
+    "def wav_to_spect_params(y, sr, file, nfft, hop_length, win_length, plot=True): #, call_wav\n",
     "    \n",
     "    yml_file=file[:-3] + 'yml'\n",
     "\n",
@@ -243,22 +248,7 @@
     "        Y = librosa.stft(y, n_fft=nfft, hop_length=hop_length, win_length=win_length) \n",
     "        Ydb = librosa.amplitude_to_db(abs(Y), ref=1)\n",
     "        \n",
-    "        librosa.display.specshow(Ydb, cmap='seismic', sr=sr, x_axis='time', y_axis='fft', hop_length=32)\n",
-    "        \n",
-    "        cb=plt.colorbar()\n",
-    "        cb.set_label('Power [dB re to {} {}^2]'.format(ref, raw_unit), rotation=270, labelpad=+15)\n",
     "\n",
-    "        plt.xlabel('Time [s]')\n",
-    "        plt.ylabel('Frequency [kHz]'.format(ref, raw_unit))\n",
-    "        ticks, labels = plt.yticks()\n",
-    "        plt.yticks(ticks, [str(t / 1000) for t in ticks])\n",
-    "        plt.title('onset: {} (UTC) \\nduration: {} seconds'.format(start_utc, duration_seconds))\n",
-    "        \n",
-    "\n",
-    "        # Save spectograms\n",
-    "        plt.savefig(file[:-3] + 'png', bbox_inches='tight', dpi=600, facecolor='White')\n",
-    "        plt.close()\n",
-    "    \n",
     "        return Ydb\n",
     "    \n",
     "    else: \n",
@@ -267,38 +257,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 25,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "12 12 12\n"
+     ]
+    }
+   ],
    "source": [
-    "#Close and previous graphs\n",
-    "plt.close()"
+    "nffts=[512, 2048, 8192, 2048, 2048, 2048, 2048, 2048, 2048, 2048, 2048, 2048]\n",
+    "\n",
+    "hop_l=[32, 32, 32, 1024, 512, 256, 32, 32, 32, 32, 32, 32]\n",
+    "\n",
+    "win_l=[512, 2048, 8192,  2048, 2048, 2048, 256, 300, 350, 400, 450, 512]\n",
+    "\n",
+    "print(len(nffts), len(hop_l), len(win_l))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prepare figure size, read in file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "nffts=[512, 2048, 8192]\n",
-    "\n",
-    "hop_l=[32, 32, 32]\n",
-    "\n",
-    "win_l=[512, 2048, 8192]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "scrolled": true
-   },
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e9fe2f1fa7bd45e387880cd4c0942c01",
+       "model_id": "324f3d06300644039c9fe1eb0cfc528a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,70 +305,121 @@
      "output_type": "display_data"
     },
     {
-     "ename": "NameError",
-     "evalue": "name 'raw_unit' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-69-34e46dda3c18>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m     \u001b[0mcb\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mplt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcolorbar\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m     \u001b[0mcb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_label\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Power [dB re to {} {}^2]'\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mformat\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mref_value\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mraw_unit\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrotation\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m270\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlabelpad\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;36m15\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     25\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'raw_unit' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4 3\n",
+      "0\n",
+      "0 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-44-3e5484e0a59a>:59: UserWarning: FixedFormatter should only be used together with FixedLocator\n",
+      "  current_axis.set_yticklabels(new_yticks)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "0 1\n",
+      "2\n",
+      "0 2\n",
+      "3\n",
+      "1 0\n",
+      "4\n",
+      "1 1\n",
+      "5\n",
+      "1 2\n",
+      "6\n",
+      "2 0\n",
+      "7\n",
+      "2 1\n",
+      "8\n",
+      "2 2\n",
+      "9\n",
+      "3 0\n",
+      "10\n",
+      "3 1\n",
+      "11\n",
+      "3 2\n"
      ]
     }
    ],
    "source": [
-    "fig=plt.figure()\n",
-    "\n",
+    "#Prepare plot \n",
+    "plt.close()\n",
     "cols=3\n",
-    "rows=round(len(nffts)/3)\n",
+    "rows=math.ceil(len(nffts)/3)\n",
+    "figure, axes = plt.subplots(nrows=rows, ncols=cols, squeeze=False)\n",
     "\n",
+    "print(rows, cols)\n",
     "\n",
-    "for p in range(len(nffts)):\n",
-    "\n",
-    "    y, sr=open_wav(the_wav, sample_rate)\n",
-    "\n",
-    "    Ydb=wav_to_spect_params(y, ref_value, the_wav, nffts[p], hop_l[p], win_l[p])\n",
-    "\n",
-    "    #if type(Ydb)!= None: \n",
-    "\n",
-    "    #plt.figure(figsize=(round(np.shape(Ydb)[0]/10), round(np.shape(Ydb)[1]/10)))\n",
-    "    fig.add_subplot(cols, rows, p+1)\n",
-    "\n",
-    "    # tell mpl_connect we want to pass a 'button_press_event' into onclick when the event is detected\n",
-    "    #plt.gcf().canvas.mpl_connect('key_press_event', onclick_for_w(w))\n",
-    "\n",
-    "    librosa.display.specshow(Ydb, cmap='seismic', sr=sample_rate, x_axis='time', y_axis='fft')\n",
-    "    \n",
-    "    cb=plt.colorbar()\n",
-    "    cb.set_label('Power [dB re to {} {}^2]'.format(ref_value, raw_unit), rotation=270, labelpad=+15)\n",
-    "    \n",
-    "    \n",
-    "    plt.xlabel('time(samples)')\n",
-    "    plt.ylabel('dBa relative to 1 uPa**2/Hz')\n",
-    "    plt.axis([(1.450/3)*plt.xlim()[1], (1.650/3)*plt.xlim()[1], (16000/50000)*plt.ylim()[1], (20000/50000)*plt.ylim()[1]])\n",
-    "    plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "48.00512"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
+    "#Plot\n",
     "y, sr=open_wav(the_wav, sample_rate)\n",
+    "for p in range(len(nffts)):\n",
+    "    print(p)\n",
+    "    \n",
+    "    #Define plot position in terms of row and column position\n",
+    "    r=math.floor(p/3)\n",
+    "    c=p%3\n",
+    "    \n",
+    "    print(r, c)\n",
+    "    \n",
+    "    current_axis=axes[r, c]\n",
     "\n",
-    "plt.xlim()[1]"
+    "    Ydb=wav_to_spect_params(y, ref_value, the_wav, nffts[p], hop_l[p], win_l[p], plot=False)\n",
+    "\n",
+    "    img = librosa.display.specshow(Ydb, cmap='seismic', sr=sample_rate, x_axis='time', y_axis='fft', ax=current_axis, hop_length=hop_l[p])\n",
+    "    \n",
+    "    if p%3==2: \n",
+    "        cb=plt.colorbar(img, ax=current_axis) \n",
+    "        cb.set_label('Power\\n[dB re to {} {}^2]'.format(ref_value, raw_unit), rotation=270, labelpad=+15, fontsize=8)\n",
+    "    \n",
+    "    #current_axis.set_xlabel('Time [s]')\n",
+    "    \n",
+    "    #Set axis-limits - specific for where in the plot you want to zoom in!\n",
+    "    y_lim=current_axis.set_ylim()[1]\n",
+    "    x_lim=current_axis.set_xlim()[1]\n",
+    "    current_axis.set_ylim((16000/50000)*y_lim, (20000/50000)*y_lim)\n",
+    "    current_axis.set_xlim((1.450/3)*x_lim, (1.650/3)*x_lim)\n",
+    "    \n",
+    "    # Set y-axis label\n",
+    "    #if p%3==0:\n",
+    "        #current_axis.set_ylabel('Frequency [kHz]', fontsize=9)\n",
+    "    #elif p%3==1 or p%3==2 : \n",
+    "    \n",
+    "    #current_axis.set_xlabel('Time [s]')\n",
+    "    \n",
+    "    #Set automatic labels to invisible\n",
+    "    current_axis.yaxis.label.set_visible(False)\n",
+    "    current_axis.xaxis.label.set_visible(False)\n",
+    "    \n",
+    "    # Add white legend with parameters\n",
+    "    current_axis.text(0, 0.7, '\\n fs: {}kHz\\n nfft: {}\\n hop_len:{}\\n win_len: {}'.format(sample_rate/1000,nffts[p], hop_l[p], win_l[p]), fontsize = 5,  color = 'w', transform=current_axis.transAxes)\n",
+    "    \n",
+    "    current_axis.tick_params(axis='both', which='major', labelsize=5)\n",
+    "    \n",
+    "    \n",
+    "    #convert y-axis ticklabels to kHz!\n",
+    "    locs=current_axis.get_yticks()\n",
+    "    y_ticks = []\n",
+    "    new_yticks=[d/1000 for d in locs]\n",
+    "    current_axis.set_yticklabels(new_yticks)\n",
+    "    \n",
+    "    \n",
+    "    #Set overall labels\n",
+    "    figure.text(0.5, 0.04, 'Time [s]', ha='center')\n",
+    "    figure.text(0.04, 0.5,'Frequency [kHz]', ha='center', rotation=90)\n",
+    "    figure.text(0.96, 0.5,'Power\\n[dB re to {} {}^2]'.format(ref_value, raw_unit), ha='center', rotation=270)\n",
+    "\n",
+    "   \n",
+    "    \n",
+    "    plt.show()"
    ]
   },
   {
@@ -381,12 +427,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "    \n",
-    "    nfft=1024\n",
-    "    hop_length=32\n",
-    "    win_length=400"
-   ]
+   "source": []
   }
  ],
  "metadata": {
